syntax = "proto3";

option go_package = "./pkg/proto";

service ProfileGrpcService {
  rpc CreateDonorProfile(CreateDonorProfileRequestDto)
      returns (CreateDonorProfileResponseDto);
  
  rpc CreateCharityProfile(CreateCharityProfileRequestDto)
    returns (CreateCharityProfileResponseDto);

  rpc GetDonorProfile(GetDonorProfileRequestDto) 
    returns (GetDonorProfileResponseDto);

  rpc GetCharityProfile(GetCharityProfileRequestDto) 
    returns (GetCharityProfileResponseDto);
    
}

message CreateDonorProfileRequestDto {
  string firstName = 1;
  string lastName = 2;
  string address = 3;
}

message CreateDonorProfileResponseDto { string profileReadableId = 1; }

message CreateCharityProfileRequestDto {
  string organizationName = 1;
  string taxCode = 2;
  string address = 3;
}

message CreateCharityProfileResponseDto { string profileReadableId = 1; }

message GetDonorProfileRequestDto {
  string profileReadableId = 1;
}

message GetDonorProfileResponseDto {
  string firstName = 1;
  string lastName = 2;
  string address = 3;
}

message GetCharityProfileRequestDto {
  string profileReadableId = 1;
}

message GetCharityProfileResponseDto {
  string organizationName = 1;
  string taxCode = 2;
  string address = 3;
}

service KeyGrpcService {
    rpc GetPrivateKey(GetPrivateKeyRequestDto) returns (GetPrivateKeyResponseDto);
}

message GetPrivateKeyRequestDto {
}

message GetPrivateKeyResponseDto {
  string privateKey = 1;
}
